tests/sideEffectingExpressions/invalid/syntax/unecessaryOperand.wacc
# Operand is not required after ++

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int b = 0 ;
  b ++ 1
end
